--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,7 +71,16 @@
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <h1 id="welcomeH1">Welcome to the CodeCats NFT Project!</h1>
         <p id="welcomeP">
-          The CodeCats NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
+          The CodeCats NFT Project is a decentralized, open-source project that
+          aims to demonstrate how to develope and launch your own NFT
+          Collection. Follow step by step on the
+          <a
+            href="https://youtube.com/codestackr"
+            target="_blank"
+            rel="noopener noreferrer"
+            >codeSTACKr</a
+          >
+          YouTube channel.
         </p>
       </div>
     </section>
@@ -131,7 +140,9 @@
           </div>
           <div class="mint-qty">
             <span>
-              <button class="input-number-decrement btn" id="mintDecrement">–</button>
+              <button class="input-number-decrement btn" id="mintDecrement">
+                –
+              </button>
               <input
                 id="mintInput"
                 class="input-number btn"
@@ -140,7 +151,9 @@
                 min="1"
                 max="5"
               />
-              <button class="input-number-increment btn" id="mintIncrement">+</button>
+              <button class="input-number-increment btn" id="mintIncrement">
+                +
+              </button>
             </span>
             <button id="setQtyMax" class="btn">SET MAX</button>
           </div>
@@ -161,7 +174,7 @@
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
-          href="https://testnets.opensea.io/collection/teststackr-collection"
+          href="https://testnets.opensea.io/collection/facebox"
           target="_blank"
           rel="noopener noreferrer"
         >
